--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
+altgraph
 annotated-types==0.5.0
 anyio==3.7.1
 blinker==1.6.2
@@ -9,7 +9,7 @@ click==8.1.7
 exceptiongroup==1.1.3
 fastapi==0.103.1
 Flask==2.3.3
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
+future 
 google-api-core==2.11.1
 google-api-python-client==2.99.0
 google-auth==2.23.0
@@ -23,7 +23,7 @@ idna==3.4
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
+macholib 
 MarkupSafe==2.1.3
 oauth2client==4.1.3
 oauthlib==3.2.2
@@ -39,7 +39,7 @@ PyYAML==6.0.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
+six
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.7.1
